This is the CHANGES file associated with the Python program Phycas
Phycas can be obtained from http://www.phycas.org/
