@@ -42,3 +42,5 @@ phycas.xccheckout
 build.sh
 manual.pdf
 phycas-2.0.0-mac.zip
+doc/phycas-manual-2.0.0.pdf
+phycas-2.0.0-mac.tar.gz
