@@ -1,24 +1,0 @@
-Phycas: software for Bayesian phylogenetic analysis
-
-Developers:
-    Paul O. Lewis
-        Department of Ecology and Evolutionary Biology
-        The University of Connecticut
-        75 N. Eagleville Road, Unit 3043
-        Storrs, CT 06269-3043
-        USA
-
-    Mark T. Holder
-        Department of Ecology and Evolutionary Biology
-        The University of Kansas
-        1200 Sunnyside Ave
-        Lawrence, KS 66045
-        USA
-
-    David L. Swofford
-        Department of Biology
-        Duke University
-        125 Science Drive
-        Durham, NC 27708
-        USA
-
