@@ -1,0 +1,36 @@
+# [Phycas: software for Bayesian phylogenetic analysis](http://phycas.org/)
+
+Developers
+-----------
+* **Paul O. Lewis**
+Department of Ecology and Evolutionary Biology,
+The University of Connecticut,
+75 N. Eagleville Road, Unit 3043,
+Storrs, CT 06269-3043,
+USA
+
+* **Mark T. Holder**
+Department of Ecology and Evolutionary Biology,
+The University of Kansas,
+1200 Sunnyside Ave,
+Lawrence, KS 66045,
+USA
+
+* **David L. Swofford**
+Department of Biology,
+Duke University,
+125 Science Drive,
+Durham, NC 27708,
+USA
+
+Installation
+-----------
+Windows and Mac users, please see the manual. To build under Linux please see the INSTALL file.
+
+Acknowledgments
+-----------
+Phycas development was in part funded by grants EF-0331495, DEB-1036448, and DEB-1354146 from the National Science Foundation and grant 98-4-5 ME from the Alfred P. Sloan Foundation. Additional support was provided by the Department of Ecology and Evolutionary Biology at the University of Kansas and by the Department of Ecology and Evolutionary Biology and the Bioinformatics Facility of the Biotechnology/Bioservices Center at the University of Connecticut.
+
+Bug Reports:
+-----------
+Contact [Paul Lewis](paul.lewis@uconn.edu)
