@@ -1,3 +1,4 @@
 This is the CHANGES file associated with the Python program Phycas
 Phycas can be obtained from http://www.phycas.org/
 
+We have started a new CHANGES file starting with version 2.0.0 because 2.0.0 is the version associated with the official published release note describing Phycas.
